--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "14.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
     "@babel/core": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
-    "babel-loader": "^9.1.3"
+    "@prisma/client": "^6.4.1",
+    "autoprefixer": "^10.4.17",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "prisma": "^6.4.1",
+    "tailwindcss": "^3.4.1"
   }
 }
